<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OTP_Verification">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/OTP_heading"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:text="@string/otp_inst"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading" />

        <TextView
            android:id="@+id/tv_mobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/OTP_number"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75sp"
            android:orientation="horizontal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mobileNumber">

            <EditText
                android:id="@+id/et_otp1"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:hint="-"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_otp2"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:hint="-"
                android:maxLength="1"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_otp3"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:hint="-"
                android:maxLength="1"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_otp4"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:hint="-"
                android:maxLength="1"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_otp5"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:hint="-"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_otp6"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:hint="-"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="1:00 Minute"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:text="@string/OTP_question"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timer" />

        <TextView
            android:id="@+id/linkForOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OTP_link"
            android:onClick="sendOtp"
            android:textColor="@color/blue"
            android:textColorLink="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question" />

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Verify"
            android:onClick="OTPVerification"
            android:layout_marginTop="50sp"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linkForOTP"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_marginTop="10sp"
            android:textColor="@color/black"
            android:onClick="cancelActivity"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_verify"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
